--- a/Algoritmos/Algoritmo_BFS.ipynb
+++ b/Algoritmos/Algoritmo_BFS.ipynb
@@ -21,7 +21,7 @@
         "id": "1ur5h9GtDsL1"
       },
       "source": [
-        "## ALGORITMO DE BREADTH FIRST SEARCH\n",
+        "## ALGORITMO DE BREADTH FIRST SEARCH (BFS)\n",
         "\n",
         "---\n",
         "\n",
