--- a/Hito1/p_entrega.ipynb
+++ b/Hito1/p_entrega.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np \n",
-    "import networkx as nx \n",
-    "import matplotlib.pyplot as plt "
+    "import networkx as nx \n"
    ]
   },
   {
