--- a/Presentación Final/Algoritmo_Backtracking.ipynb
+++ b/Presentación Final/Algoritmo_Backtracking.ipynb
@@ -31,7 +31,7 @@
         "id": "7evld9BNIRku"
       },
       "source": [
-        "# Algoritmo Backtracking\n",
+        "# Implementación del Algoritmo Backtracking\n",
         "## Crear grafo"
       ]
     },
